# dwparser

./: Cargo.toml  README.md
assets/: big_file.srd
examples/: big_file.rs  parse_str.rs  serde.rs
src/: ast.rs  lib.rs  parser.rs  prelude.rs
src/parser/: describe.rs  item.rs  mod.rs  query.rs  value.rs
